# env-rs

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
scripts/: hook.ps1
src/: config.rs  gui.rs  injector.rs  java.rs  lib.rs  main.rs  matcher.rs  node.rs
